<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_bottom_stores"
        android:icon="@drawable/nav_home"
        android:title="@string/stores" />

    <item
        android:id="@+id/nav_bottom_categories"
        android:icon="@drawable/nav_home"
        android:title="@string/categories" />

    <item
        android:id="@+id/nav_bottom_profile"
        android:icon="@drawable/nav_notification"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_bottom_transaction"
        android:icon="@drawable/nav_deshboard"
        android:title="@string/transaction" />

</menu>
