<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_bottom_stores"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/stores" />

    <item
        android:id="@+id/nav_bottom_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_bottom_categories"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/categories" />

    <item
        android:id="@+id/nav_bottom_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/profile" />

</menu>
