<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_notification" />

    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>


    <group
        android:id="@+id/help_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_help" />

    </group>

    <group
        android:id="@+id/about_group"
        android:checkableBehavior="none">
        
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_about" />
    </group>

</menu>